# 5173663-sands-python

./: .gitignore  README.md  hello.py  pyproject.toml  run.py  signals.py  test.py
5173663_sands_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
