requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "5173663-sands-python"
version = "0.1.0"
description = "Python toolkit for simple signal generating and analyzing"
readme = "README.md"
requires-python = ">=3.11"
author = [
    {name = "imme"}
]
dependencies = [
    "numpy>=1.26
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
sands = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
